# riot-bench

docs/: 00-summary.md  01-overview.md  02-micro-benchmarks.md  03-application-benchmarks.md  04-architecture.md  05-getting-started.md  06-configuration.md  07-datasets.md  08-visual-guide.md  INDEX.md  README.md  note.md
pyDocs/: 00-PORTING-PLAN.md  01-ARCHITECTURE-DETAILS.md  02-PHASE1-PROTOTYPE.md  03-VISUAL-SUMMARY.md  04-KEY-DECISIONS.md  HOW_TO_USE.md  PHASE2-BATTLE-PLAN.md  PHASE5-KICKOFF.md  README.md  implementation_holdups.md  implementation_plan.md  implementation_progress.md  note.md
pyriotbench/: .gitignore  CHECKPOINT-02.md  CHECKPOINT-03.md  CHECKPOINT-04-CONFIG.md  CHECKPOINT-05-METRICS.md  CHECKPOINT-06-NOOP.md  CHECKPOINT-07-SENML.md  CHECKPOINT-10-BLOCKWINDOW.md  CHECKPOINT-11-BEAM.md  CHECKPOINT-12-ACCUMULATOR.md  CHECKPOINT-13-RAY-COMPLETE.md  COMPLETION-REPORT.txt  QUICKSTART.md  README.md  SESSION-SUMMARY.md  VERIFICATION-REPORT.md  pyproject.toml  test_input.txt  test_metrics.json  test_ray_input.txt  test_ray_output.txt
pyriotbench/examples/: 01_simple_task.py  02_senml_parsing.py  03_cli_usage.py  04_beam_integration.py  05_accumulator_demo.py  06_ray_integration.py  __init__.py
pyriotbench/examples/config/: example.properties  example.yaml  simple.yaml
pyriotbench/pyriotbench/: __init__.py
pyriotbench/pyriotbench/applications/: __init__.py
pyriotbench/pyriotbench/cli/: __init__.py  main.py
pyriotbench/pyriotbench/core/: __init__.py  config.py  metrics.py  registry.py  task.py
pyriotbench/pyriotbench/tasks/: __init__.py  noop.py
pyriotbench/pyriotbench/tasks/aggregate/: __init__.py  block_window_average.py  distinct_approx_count.py
pyriotbench/pyriotbench/tasks/filter/: __init__.py  bloom_filter_check.py  range_filter_check.py
pyriotbench/pyriotbench/tasks/math/: __init__.py  pi_by_viete.py
pyriotbench/pyriotbench/tasks/parse/: __init__.py  csv_to_senml_parse.py  senml_parse.py
pyriotbench/pyriotbench/tasks/predict/: __init__.py  decision_tree_classify.py
pyriotbench/pyriotbench/tasks/statistics/: __init__.py  accumulator.py  interpolation.py  kalman_filter.py  second_order_moment.py
pyriotbench/test_ray_batch_output/: test_output_output.txt
pyriotbench/tests/: __init__.py
pyriotbench/tests/fixtures/: filter_fixtures.py
pyriotbench/tests/test_cli/: __init__.py  conftest.py  test_commands.py
pyriotbench/tests/test_core/: __init__.py  test_config.py  test_metrics.py  test_registry.py  test_task.py
pyriotbench/tests/test_platforms/: __init__.py  conftest.py  test_standalone_runner.py
pyriotbench/tests/test_platforms/test_beam/: __init__.py  conftest.py  test_adapter.py  test_runner.py
pyriotbench/tests/test_platforms/test_ray/: __init__.py  test_adapter.py  test_runner.py
pyriotbench/tests/test_tasks/: __init__.py  test_noop.py  test_senml_parse.py
pyriotbench/tests/test_tasks/test_aggregate/: __init__.py  conftest.py  test_block_window_average.py  test_distinct_approx_count.py
pyriotbench/tests/test_tasks/test_filter/: __init__.py  conftest.py  test_bloom_filter_check.py  test_range_filter_check.py
pyriotbench/tests/test_tasks/test_math/: __init__.py  test_pi_by_viete.py
pyriotbench/tests/test_tasks/test_parse/: test_csv_to_senml_parse.py
pyriotbench/tests/test_tasks/test_predict/: __init__.py  conftest.py  test_decision_tree_classify.py
pyriotbench/tests/test_tasks/test_statistics/: __init__.py  conftest.py  test_accumulator.py  test_interpolation.py  test_kalman_filter.py  test_second_order_moment.py
